--- a/Draft/assets3/index.html
+++ b/Draft/assets3/index.html
@@ -191,6 +191,119 @@
       </div>
     </div>
   </div>
+  <div class="row" style="padding-left: 50px; padding-right: 50px;">
+    <div class="col s12 m12 l4" style="padding: 50px 5px;">
+      <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src="./assets/images/horizontal/image17.jpg"
+          width="320"
+          height="213"
+          style="width: 320px; height: 213px;">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4">Weather<i class="material-icons right">more_vert</i></span>
+          <p><a href="#">This is a link</a></p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4">Toronto<i class="material-icons right">close</i></span>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+      </div>
+ </div>
+    <div class="col s12 m12 l4" style="padding: 50px 5px;">
+      <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src="./assets/images/horizontal/image7.jpg"
+          width="320"
+          height="213"
+          style="width: 320px; height: 213px;">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4">Sports<i class="material-icons right">more_vert</i></span>
+          <p><a href="#">This is a link</a></p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4">Hockey<i class="material-icons right">close</i></span>
+          <p>2022 NHL MOCK DRAFT: THE NEXT WAVE. We now know the order for all but four selections in the first round, so our prospect expert continues his forecast.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col s12 m12 l4" style="padding: 50px 5px;">
+      <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src="./assets/images/horizontal/image8.jpg"
+          width="320"
+          height="213"
+          style="width: 320px; height: 213px;">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4">Social<i class="material-icons right">more_vert</i></span>
+          <p><a href="#">This is a link</a></p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4">Social Media<i class="material-icons right">close</i></span>
+          <p>TikTok Announces New Initiatives for Pride Month, Including a Range of Live-Stream Programs</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row" style="padding-left: 50px; padding-right: 50px;">
+    <div class="col s12 m12 l4" style="padding: 50px 5px;">
+      <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src="./assets/images/horizontal/image17.jpg"
+          width="320"
+          height="213"
+          style="width: 320px; height: 213px;">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4">Weather<i class="material-icons right">more_vert</i></span>
+          <p><a href="#">This is a link</a></p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4">Toronto<i class="material-icons right">close</i></span>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+      </div>
+ </div>
+    <div class="col s12 m12 l4" style="padding: 50px 5px;">
+      <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src="./assets/images/horizontal/image7.jpg"
+          width="320"
+          height="213"
+          style="width: 320px; height: 213px;">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4">Sports<i class="material-icons right">more_vert</i></span>
+          <p><a href="#">This is a link</a></p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4">Hockey<i class="material-icons right">close</i></span>
+          <p>2022 NHL MOCK DRAFT: THE NEXT WAVE. We now know the order for all but four selections in the first round, so our prospect expert continues his forecast.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col s12 m12 l4" style="padding: 50px 5px;">
+      <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src="./assets/images/horizontal/image8.jpg"
+          width="320"
+          height="213"
+          style="width: 320px; height: 213px;">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4">Social<i class="material-icons right">more_vert</i></span>
+          <p><a href="#">This is a link</a></p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4">Social Media<i class="material-icons right">close</i></span>
+          <p>TikTok Announces New Initiatives for Pride Month, Including a Range of Live-Stream Programs</p>
+        </div>
+      </div>
+    </div>
+  </div>
+ </section>
  
   <!-- Footer -->
   <section class="footer">
