Fixed links in both HTML nad linked the HTML with each other

--- a/financial.html
+++ b/financial.html
@@ -31,11 +31,11 @@
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul id="nav-mobile" class="right">
          <!-- Search box -->
-          <ul style="cursor:grab;"> 
+          <ul> 
             <!-- <li>
               <input id="myInput" type="text" placeholder="Serach by keyword">
             </li> -->
-            <li><a href="#" onclick="toggleModal();">Home</a></li>
+            <li><a href="index.html" onclick="toggleModal();">Home</a></li>
             <li><a href="#" onclick="toggleModal();">Contact us</a></li>
           </ul>
       </div>
@@ -44,52 +44,52 @@
 
 
 <!-- Carousel Slider -->
-<!-- <h3 style="padding-left:30px; padding-top:70px;">Trending Tickers</h3>
+<h3 style="padding-left:30px; padding-top:70px;">Trending Tickers</h3>
 <hr>
-<div class="ticker-display" id="Highlights">
-    
-</div> -->
+<div class="fin-carousel ticker-display" id="Highlights">
+
+</div>
 
 
 
 <!-- Cards -->
-<section class="fcards" id="search-results">
+<section class="fcards-fin" id="search-results">
   <h3 style="padding-left:30px ;">Top News</h3>
   <hr>
   <!-- Card 1 -->
   <div class="row" style="padding-left: 50px; padding-right: 50px;">
     <div class="col s12 m12 l4" style="padding: 50px 5px;">
-      <div class="card c1"><a href="#" id="card1-link">
+      <div class="card c1"><a target=”_blank” id="card1-link">
         <div class="card-image waves-effect waves-block waves-light">
           <img class="activator card1-img" src="./assets/images/horizontal/image17.jpg" width="320" height="213">
         </div>
         <div class="card-content">
-          <span class="activator grey-text text-darken-4 card1-title">Weather</span>
-          <p class='card1-abs'>This is a link</p>
+          <span class="activator grey-text text-darken-4 card1-title"></span>
+          <p class='card1-abs'></p>
         </div></a>
       </div>
  </div>
  <!-- Card 2 -->
     <div class="col s12 m12 l4" style="padding: 50px 5px;">
-      <div class="card c2"><a href="#" id="card1-link">
+      <div class="card c2"><a target=”_blank” id="card2-link">
         <div class="card-image waves-effect waves-block waves-light">
           <img class="activato  card2-img" src="./assets/images/horizontal/image7.jpg" width="320" height="213">
         </div>
         <div class="card-content">
-          <span class="activator grey-text text-darken-4 card2-title">Sports</span>
-          <p class='card2-abs'>This is a link</p></a>
+          <span class="activator grey-text text-darken-4 card2-title"></span>
+          <p class='card2-abs'></p></a>
         </div>
       </div>
     </div>
     <!-- Card 3 -->
     <div class="col s12 m12 l4" style="padding: 50px 5px;">
-      <div class="card c3"><a href="#" id="card1-link">
+      <div class="card c3"><a target=”_blank” id="card3-link">
         <div class="card-image waves-effect waves-block waves-light">
           <img class="activator card3-img" src="./assets/images/horizontal/image8.jpg" width="320" height="213">
         </div>
         <div class="card-content">
-          <span class="activator grey-text text-darken-4 card3-title">Social</span>
-          <p class='card3-abs'>This is a link</p></a>
+          <span class="activator grey-text text-darken-4 card3-title"></span>
+          <p class='card3-abs'></p></a>
         </div>
       </div>
     </div>
@@ -97,37 +97,37 @@
   <!-- Card 4 -->
   <div class="row" style="padding-left: 50px; padding-right: 50px;">
     <div class="col s12 m12 l4" style="padding: 50px 5px;">
-      <div class="card c4"><a href="#" id="card1-link">
+      <div class="card c4"><a target=”_blank” id="card4-link">
         <div class="card-image waves-effect waves-block waves-light">
           <img class="card4-img" src="./assets/images/horizontal/image17.jpg" width="320" height="213">
         </div>
         <div class="card-content">
-          <span class="activator grey-text text-darken-4 card4-title">Weather</span>
-          <p class='card4-abs'>This is a link</p></a>
+          <span class="activator grey-text text-darken-4 card4-title"></span>
+          <p class='card4-abs'></p></a>
         </div>
       </div>
  </div>
  <!-- Card 5 -->
     <div class="col s12 m12 l4" style="padding: 50px 5px;">
-      <div class="card c5"><a href="#" id="card1-link">
+      <div class="card c5"><a target=”_blank” id="card5-link">
         <div class="card-image waves-effect waves-block waves-light">
           <img class="card5-img" src="./assets/images/horizontal/image7.jpg" width="320" height="213">
         </div>
         <div class="card-content">
-          <span class="activator grey-text text-darken-4 card5-title">Sports</span>
-          <p class='card5-abs'>This is a link</p></a>
+          <span class="activator grey-text text-darken-4 card5-title"></span>
+          <p class='card5-abs'></p></a>
         </div>
       </div>
     </div>
     <!-- Card 6 -->
     <div class="col s12 m12 l4" style="padding: 50px 5px;">
-      <div class="card c6"><a href="#" id="card1-link">
+      <div class="card c6"><a target=”_blank” id="card6-link">
         <div class="card-image waves-effect waves-block waves-light">
           <img class="card6-img" src="./assets/images/horizontal/image8.jpg" width="320" height="213">
         </div>
         <div class="card-content">
-          <span class="activator grey-text text-darken-4 card6-title">Social</span>
-          <p class='card6-abs'>This is a link</p></a>
+          <span class="activator grey-text text-darken-4 card6-title"></span>
+          <p class='card6-abs'></p></a>
         </div>
       </div>
     </div>
@@ -135,37 +135,37 @@
   <!-- Card 7 -->
   <div class="row" style="padding-left: 50px; padding-right: 50px;">
     <div class="col s12 m12 l4" id="padding: 50px 5px;">
-      <div class="card c7"><a href="#" class="card1-link">
+      <div class="card c7"><a target=”_blank” class="card7-link">
         <div class="card-image waves-effect waves-block waves-light">
           <img class="activator card7-img" src="./assets/images/horizontal/image17.jpg" width="320" height="213">
         </div>
         <div class="card-content">
-          <span class="activator grey-text text-darken-4 card7-title">Weather</span>
-          <p class='card7-abs'>This is a link</p></a>
+          <span class="activator grey-text text-darken-4 card7-title"></span>
+          <p class='card7-abs'></p></a>
         </div>
       </div>
  </div>
  <!-- Card 8 -->
     <div class="col s12 m12 l4" style="padding: 50px 5px;">
-      <div class="card c8"><a href="#" id="card1-link">
+      <div class="card c8"><a target=”_blank” id="card8-link">
         <div class="card-image waves-effect waves-block waves-light">
           <img class="activator card8-img" src="./assets/images/horizontal/image7.jpg" width="320" height="213">
         </div>
         <div class="card-content">
-          <span class="activator grey-text text-darken-4 card8-title">Sports</span>
-          <p class='card8-abs'>This is a link</p></a>
+          <span class="activator grey-text text-darken-4 card8-title"></span>
+          <p class='card8-abs'></p></a>
         </div>
       </div>
     </div>
     <!-- Card 9 -->
     <div class="col s12 m12 l4" style="padding: 50px 5px;">
-      <div class="card c9"><a href="#" id="card1-link">
+      <div class="card c9"><a target=”_blank” id="card9-link">
         <div class="card-image waves-effect waves-block waves-light">
           <img class="activator card9-img" src="./assets/images/horizontal/image8.jpg" width="320" height="213">
         </div>
         <div class="card-content">
-          <span class="activator grey-text text-darken-4 card9-title">Social</span>
-          <p class='card9-abs'>This is a link</p></a>
+          <span class="activator grey-text text-darken-4 card9-title"></span>
+          <p class='card9-abs'></p></a>
         </div>
       </div>
     </div>
