--- a/financial.html
+++ b/financial.html
@@ -36,7 +36,7 @@
               <input id="myInput" type="text" placeholder="Serach by keyword">
             </li> -->
             <li><a href="index.html" onclick="toggleModal();">Home</a></li>
-            <li><a href="#" onclick="toggleModal();">Contact us</a></li>
+            <!-- <li><a href="#" onclick="toggleModal();">Contact us</a></li> -->
           </ul>
       </div>
     </nav>
