--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project-News</title>
+    <title>OnClick News</title>
 <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
@@ -29,15 +29,11 @@
 <header class="navbar-main">
     <nav class="nav-fixed">
       <div class="nav-wrapper">
-        <a href="#" class="brand-logo">One World-News</a>
+        <a href="#" class="brand-logo">OnClick News</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul id="nav-mobile" class="right">
          <!-- Search box -->
           <ul> 
-            <!-- <li>
-              <input id="myInput" type="text" placeholder="Serach by keyword">
-            </li> -->
-            <li><a href="#" onclick="toggleModal();">Home</a></li>
             <li><a href="financial.html" onclick="toggleModal();">Finance</a></li>
             <!-- Dropdown -->     
             <li>
@@ -49,13 +45,48 @@
                 <li><a href="#search-results">Sports</a></li>
               </ul>
             </li>
-            <li><a href="#" onclick="toggleModal();">Contact us</a></li>
-            
+            <!-- Modal Trigger for contact us form-->
+            <li> 
+              <a class="waves-effect waves-light btn modal-trigger" data-target="modal1">Contact Us</a>
+            </li>            
           </ul>
       </div>
     </nav>
 </header>
 
+
+  <!-- Modal for Contact Form -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <div class="row">
+        <form class="col s12">
+          <div class="row">
+            <div class="input-field col s6">
+              <input id="first_name" type="text" class="validate">
+              <label for="first_name">First Name</label>
+            </div>
+            <div class="input-field col s6">
+              <input id="last_name" type="text" class="validate">
+              <label for="last_name">Last Name</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="email" type="email" class="validate">
+              <label for="email">Email</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="message" type="email" class="validate">
+              <label for="message">Message</label>
+            </div>
+          </div>
+          <button class="btn green modal-close">Submit</button>  
+        </form>
+      </div>
+    </div>
+  </div>
 
 <!-- Carousel Slider -->
 <h3 style="padding-left:30px; padding-top:70px;">World At A Glance</h3>
@@ -255,8 +286,8 @@
  <footer>
    <hr style="border: 1px solid red;">
   <div class="footer-content">
-      <h3 id="footer-text">Hot News</h3>
-      <p>We focus on delivering fast news to our customers through out multiple countries around the world, <span><a href="#">contact us</a></span>.</p>
+      <h4 id="footer-text">Get latest news with one click</h4>
+      <p>We focus on delivering fast news to our customers through out multiple countries around the world, <span><a class="waves-light waves-effect modal-trigger" data-target="modal1">contact us</a></span>.</p>
   </div>
   <div class="footer-bottom">
       <p>copyright <span>©2022 Group Github</span></p>
@@ -269,7 +300,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <!-- Jquery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<!-- JavaScript-Flickity -->
+     <!-- JavaScript-Flickity -->
 <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 <script type="text/javascript">
 $('.main-carousel').flickity({
@@ -279,6 +310,10 @@ $('.main-carousel').flickity({
   freeScroll: true
 });
 
+document.addEventListener("DOMContentLoaded", function(){
+  const box = document.querySelector(".modal");
+  M.Modal.init(box,{});
+})
 </script>
 <!-- JS link -->
 <script src="./assets/news.js"></script>
