--- a/financial.html
+++ b/financial.html
@@ -61,7 +61,7 @@
     <div class="col s12 m12 l4" style="padding: 50px 5px;">
       <div class="card c1"><a target=”_blank” id="card1-link">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator card1-img" src="./assets/images/horizontal/image17.jpg" width="320" height="213">
+          <img class="activator card1-img" width="320" height="213">
         </div>
         <div class="card-content">
           <span class="activator grey-text text-darken-4 card1-title"></span>
@@ -73,7 +73,7 @@
     <div class="col s12 m12 l4" style="padding: 50px 5px;">
       <div class="card c2"><a target=”_blank” id="card2-link">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activato  card2-img" src="./assets/images/horizontal/image7.jpg" width="320" height="213">
+          <img class="activato  card2-img" width="320" height="213">
         </div>
         <div class="card-content">
           <span class="activator grey-text text-darken-4 card2-title"></span>
@@ -85,7 +85,7 @@
     <div class="col s12 m12 l4" style="padding: 50px 5px;">
       <div class="card c3"><a target=”_blank” id="card3-link">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator card3-img" src="./assets/images/horizontal/image8.jpg" width="320" height="213">
+          <img class="activator card3-img" width="320" height="213">
         </div>
         <div class="card-content">
           <span class="activator grey-text text-darken-4 card3-title"></span>
@@ -99,7 +99,7 @@
     <div class="col s12 m12 l4" style="padding: 50px 5px;">
       <div class="card c4"><a target=”_blank” id="card4-link">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="card4-img" src="./assets/images/horizontal/image17.jpg" width="320" height="213">
+          <img class="card4-img" width="320" height="213">
         </div>
         <div class="card-content">
           <span class="activator grey-text text-darken-4 card4-title"></span>
@@ -111,7 +111,7 @@
     <div class="col s12 m12 l4" style="padding: 50px 5px;">
       <div class="card c5"><a target=”_blank” id="card5-link">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="card5-img" src="./assets/images/horizontal/image7.jpg" width="320" height="213">
+          <img class="card5-img" width="320" height="213">
         </div>
         <div class="card-content">
           <span class="activator grey-text text-darken-4 card5-title"></span>
@@ -123,7 +123,7 @@
     <div class="col s12 m12 l4" style="padding: 50px 5px;">
       <div class="card c6"><a target=”_blank” id="card6-link">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="card6-img" src="./assets/images/horizontal/image8.jpg" width="320" height="213">
+          <img class="card6-img" width="320" height="213">
         </div>
         <div class="card-content">
           <span class="activator grey-text text-darken-4 card6-title"></span>
@@ -134,10 +134,10 @@
   </div>
   <!-- Card 7 -->
   <div class="row" style="padding-left: 50px; padding-right: 50px;">
-    <div class="col s12 m12 l4" id="padding: 50px 5px;">
+    <div class="col s12 m12 l4" style="padding: 50px 5px;">
       <div class="card c7"><a target=”_blank” class="card7-link">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator card7-img" src="./assets/images/horizontal/image17.jpg" width="320" height="213">
+          <img class="activator card7-img" width="320" height="213">
         </div>
         <div class="card-content">
           <span class="activator grey-text text-darken-4 card7-title"></span>
@@ -149,7 +149,7 @@
     <div class="col s12 m12 l4" style="padding: 50px 5px;">
       <div class="card c8"><a target=”_blank” id="card8-link">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator card8-img" src="./assets/images/horizontal/image7.jpg" width="320" height="213">
+          <img class="activator card8-img" width="320" height="213">
         </div>
         <div class="card-content">
           <span class="activator grey-text text-darken-4 card8-title"></span>
@@ -161,7 +161,7 @@
     <div class="col s12 m12 l4" style="padding: 50px 5px;">
       <div class="card c9"><a target=”_blank” id="card9-link">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator card9-img" src="./assets/images/horizontal/image8.jpg" width="320" height="213">
+          <img class="activator card9-img" width="320" height="213">
         </div>
         <div class="card-content">
           <span class="activator grey-text text-darken-4 card9-title"></span>
